1576799282 | 38 files | M bin/version.txt,  M content/panorama/localization/tenfoot_dutch.txt,  M content/panorama/localization/tenfoot_french.txt,  M content/panorama/localization/tenfoot_turkish.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_finnish.txt,  M content/vrmonitor/translations/vrmonitor_french.txt,  M content/vrmonitor/translations/vrmonitor_german.txt,  M content/vrmonitor/translations/vrmonitor_greek.txt,  M content/vrmonitor/translations/vrmonitor_hungarian.txt,  M content/vrmonitor/translations/vrmonitor_italian.txt,  M content/vrmonitor/translations/vrmonitor_japanese.txt,  M content/vrmonitor/translations/vrmonitor_latam.txt,  M content/vrmonitor/translations/vrmonitor_norwegian.txt,  M content/vrmonitor/translations/vrmonitor_pol
https://steamdb.info/patchnotes/4513328/

--- a/content/panorama/localization/tenfoot_turkish.txt
+++ b/content/panorama/localization/tenfoot_turkish.txt
@@ -540,7 +540,7 @@
 "[english]SelectModelSkin"	"Select a replacement model"
 "ModelSkinName_Controller"	"Kontrolcü"
 "[english]ModelSkinName_Controller"	"Controller"
-"ModelSKinName_BaseStation"	"Ana İstasyon"
+"ModelSKinName_BaseStation"	"Takip İstasyonu"
 "[english]ModelSKinName_BaseStation"	"Base Station"
 "ModelSkinName_Camera"	"Kamera"
 "[english]ModelSkinName_Camera"	"Camera"
