--- a/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
@@ -209,13 +209,13 @@
 "[english]VRInitError_Init_NotSupportedWithCompositor_Action"	"More info"
 "VRInitError_Driver_Failed_Header"	"SteamVR-fout"
 "[english]VRInitError_Driver_Failed_Header"	"SteamVR Error"
-"VRInitError_Driver_Failed_Description"	"Er is een interne fout opgetreden. Klik hieronder voor meer informatie."
+"VRInitError_Driver_Failed_Description"	"SteamVR is tegen een fout aangelopen. Controleer je gebruikersrechten op deze computer. Of verwijder eventueel aan de SteamVR-stuurprogrammamap handmatig toegevoegde bestanden."
 "[english]VRInitError_Driver_Failed_Description"	"SteamVR has encountered an error. Please review your user permissions on this computer. Or, if you manually added something to the SteamVR drivers directory, remove it."
 "VRInitError_Driver_Failed_Action"	"Meer informatie"
 "[english]VRInitError_Driver_Failed_Action"	"More info"
 "VRInitError_Driver_Unknown_Header"	"SteamVR-fout"
 "[english]VRInitError_Driver_Unknown_Header"	"SteamVR Error"
-"VRInitError_Driver_Unknown_Description"	"Een van de stuurprogramma's die je via de instellingen hebt geconfigureerd is niet geldig."
+"VRInitError_Driver_Unknown_Description"	"SteamVR is tegen een apparaatfout aangelopen."
 "[english]VRInitError_Driver_Unknown_Description"	"SteamVR has encountered a device error."
 "VRInitError_Driver_Unknown_Action"	"Los het op!"
 "[english]VRInitError_Driver_Unknown_Action"	"Fix it!"
@@ -483,7 +483,7 @@
 "[english]Popover_Off_Controller_Action"	"More info"
 "Popover_Off_Base_Header"	"Basisstation niet gedetecteerd"
 "[english]Popover_Off_Base_Header"	"Base station not detected"
-"Popover_Off_Base_Description"	"Zorg ervoor dat het stroom krijgt en aangesloten is."
+"Popover_Off_Base_Description"	"Zorg ervoor dat het aanstaat en dat het zich in de weergave van je headset bevindt."
 "[english]Popover_Off_Base_Description"	"Make sure it is turned on and and in view of your headset."
 "Popover_Off_Base_Action"	"Meer informatie"
 "[english]Popover_Off_Base_Action"	"More info"
@@ -507,17 +507,17 @@
 "[english]Popover_Pose_Invalid_Header"	"Device active"
 "Popover_Pose_HMD_Header"	"Headset actief"
 "[english]Popover_Pose_HMD_Header"	"Headset active"
-"Popover_Pose_HMD_Description"	"Deze headset is verbonden en volgt."
+"Popover_Pose_HMD_Description"	"Je headset is momenteel aan het volgen."
 "[english]Popover_Pose_HMD_Description"	"Your headset is currently tracking."
 "Popover_Pose_Controller_Header"	"Controller actief"
 "[english]Popover_Pose_Controller_Header"	"Controller active"
-"Popover_Pose_Controller_Description"	"Deze controller is verbonden en volgt."
+"Popover_Pose_Controller_Description"	"Deze controller is momenteel aan het volgen."
 "[english]Popover_Pose_Controller_Description"	"This controller is currently tracking."
 "Popover_Pose_Controller_Action"	"Controller identificeren"
 "[english]Popover_Pose_Controller_Action"	"Identify controller"
 "Popover_Pose_Base_Header"	"Basisstation actief"
 "[english]Popover_Pose_Base_Header"	"Base station active"
-"Popover_Pose_Base_Description"	"Dit basisstation heeft stroom en volgt."
+"Popover_Pose_Base_Description"	"Dit basisstation is momenteel aan het volgen."
 "[english]Popover_Pose_Base_Description"	"This base station is currently tracking."
 "Popover_Pose_Other_Header"	"Ander apparaat is gereed"
 "[english]Popover_Pose_Other_Header"	"Other ready"
@@ -527,17 +527,17 @@
 "[english]Popover_NoPose_Invalid_Header"	"Not tracking"
 "Popover_NoPose_HMD_Header"	"Zoeken..."
 "[english]Popover_NoPose_HMD_Header"	"Searching..."
-"Popover_NoPose_HMD_Description"	"Deze headset is verbonden, maar volgt niet. Zorg ervoor dat het een basisstation kan zien."
+"Popover_NoPose_HMD_Description"	"Deze headset is momenteel niet aan het volgen. Zorg ervoor dat deze in het zicht staat van een basisstation."
 "[english]Popover_NoPose_HMD_Description"	"This headset is not currently tracking. Make sure it is in view of a base station. "
 "Popover_NoPose_Controller_Header"	"Zoeken..."
 "[english]Popover_NoPose_Controller_Header"	"Searching..."
-"Popover_NoPose_Controller_Description"	"Deze controller is verbonden, maar volgt niet. Zorg ervoor dat deze een basisstation kan zien."
+"Popover_NoPose_Controller_Description"	"Deze controller is momenteel niet aan het volgen. Zorg ervoor dat deze in het zicht staat van een basisstation."
 "[english]Popover_NoPose_Controller_Description"	"This controller is not currently tracking. Make sure it is in view of a base station. "
 "Popover_NoPose_Controller_Action"	"Controller identificeren"
 "[english]Popover_NoPose_Controller_Action"	"Identify controller"
 "Popover_NoPose_Base_Header"	"Zoeken..."
 "[english]Popover_NoPose_Base_Header"	"Searching..."
-"Popover_NoPose_Base_Description"	"Dit basisstation heeft stroom, maar volgt niet. Zorg ervoor dat het zichtbaar is vanuit je headset of een controller."
+"Popover_NoPose_Base_Description"	"Dit basisstation is momenteel geen apparaten aan het volgen. Zorg ervoor dat het in het zicht staat van je headset."
 "[english]Popover_NoPose_Base_Description"	"This base station is not currently tracking any devices. Make sure it is in view of your headset."
 "Popover_NoPose_Other_Header"	"Ander apparaat volgt niet"
 "[english]Popover_NoPose_Other_Header"	"Other not tracking"
@@ -577,7 +577,7 @@
 "[english]Warning_DismissableWarning_RunTutorialAgain_Action"	"More info"
 "Warning_DismissableWarning_BasestationsTooFarApart_Header"	"Basisstations staan te ver uit elkaar"
 "[english]Warning_DismissableWarning_BasestationsTooFarApart_Header"	"VR setup notice"
-"Warning_DismissableWarning_BasestationsTooFarApart_Description"	"Zorg er voor de beste ervaring voor dat je basisstations niet meer dan 5,5 meter uit elkaar staan."
+"Warning_DismissableWarning_BasestationsTooFarApart_Description"	"Je basisstations zijn verder van elkaar verwijderd dan wordt aangeraden. Overweeg voor de beste ervaring om de basisstations te herpositioneren zodat deze niet meer dan 5,5 meter van elkaar verwijderd zijn."
 "[english]Warning_DismissableWarning_BasestationsTooFarApart_Description"	"Your base stations are farther apart than recommended. For the best experience, consider repositioning them so they're no more than 5.5 meters (18 feet) apart. "
 "Warning_DismissableWarning_OpticalBasestationSyncWarning_Header"	"Basisstationfout"
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Header"	"Base Station Error"
@@ -651,7 +651,7 @@
 "[english]Popover_Pose_Base_Action"	"Identify base station"
 "Popover_BaseStationsTooFarApart_Header"	"Basisstations staan te ver uit elkaar"
 "[english]Popover_BaseStationsTooFarApart_Header"	"VR setup notice"
-"Popover_BaseStationsTooFarApart_Description"	"De afstand tussen de basisstations is %1 meter. De aanbevolen afstand is minder dan 5,5 meter."
+"Popover_BaseStationsTooFarApart_Description"	"Je basisstations staan %1 meter van elkaar verwijderd. Overweeg voor de beste ervaring om de basisstations te herpositioneren zodat deze niet meer dan 5,5 meter van elkaar verwijderd zijn."
 "[english]Popover_BaseStationsTooFarApart_Description"	"Your base stations are %1 meters apart. For the best experience, consider repositioning them so they're no more than 5.5 meters (18 feet) apart."
 "Popover_SeeOnlyOneBase_Header"	"Slechts één basisstation zichtbaar"
 "[english]Popover_SeeOnlyOneBase_Header"	"Only one base station is visible"
@@ -813,11 +813,11 @@
 "[english]Popover_NotReady_Tracker_Header"	"Tracker not ready"
 "Popover_Pose_Tracker_Header"	"Volgapparaat actief"
 "[english]Popover_Pose_Tracker_Header"	"Tracker active"
-"Popover_Pose_Tracker_Description"	"Dit apparaat is verbonden en volgt."
+"Popover_Pose_Tracker_Description"	"Dit apparaat volgt."
 "[english]Popover_Pose_Tracker_Description"	"This device is currently tracking."
 "Popover_NoPose_Tracker_Header"	"Zoeken..."
 "[english]Popover_NoPose_Tracker_Header"	"Searching..."
-"Popover_NoPose_Tracker_Description"	"Dit apparaat is verbonden, maar volgt niet."
+"Popover_NoPose_Tracker_Description"	"Dit apparaat volgt niet. Zorg ervoor dat het zichtbaar is voor een basisstation."
 "[english]Popover_NoPose_Tracker_Description"	"This device is not currently tracking. Make sure it is in view of a base station."
 "Popover_Standby_Tracker_Header"	"Volgapparaat in stand-bymodus"
 "[english]Popover_Standby_Tracker_Header"	"Tracker standing by"
@@ -921,7 +921,7 @@
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Header"	"Verkeerde videokaart"
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Header"	"Wrong Video Card"
-"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Description"	"Voor deze applicatie moeten de headset en het primaire beeldscherm op dezelfde videokaart zijn aangesloten."
+"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Description"	"Sluit de headset op dezelfde videokaart aan die gebruikt wordt voor het primaire beeldscherm."
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Description"	"Please plug your headset into the same graphics card as your primary monitor."
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	"Meer informatie"
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	"More info"
