--- a/content/vrmonitor/translations/vrmonitor_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_finnish.txt
@@ -2387,9 +2387,9 @@
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Parametri ei kelpaa"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
-"Settings_Advanced_RefreshRate_NotFound"	"<b>HUOMAA:</b> virutuaalitodellisuuslasisi tukevat lisäpäivitystiheyttä, mutta grafiikka-ajurisi ei pysty havaitsemaan sitä. Varmista, että virtuaalitodellisuuslasisi laiteohjelmisto ja grafiikka-ajurisi ovat ajan tasalla."
+"Settings_Advanced_RefreshRate_NotFound"	"<b>HUOMAA:</b> virtuaalitodellisuuslasisi tukevat lisäpäivitystiheyttä, mutta grafiikka-ajurisi ei pysty havaitsemaan sitä. Varmista, että virtuaalitodellisuuslasisi laiteohjelmisto ja grafiikka-ajurisi ovat ajan tasalla."
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
-"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>HUOMAA:</b> virutuaalitodellisuuslasisi tukevat lisäpäivitystiheyttä, mutta SteamVR ei voi hallinnoida päivitystiheyttä, kun virtuaalitodellisuuslasit ovat jatketussa tilassa. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Ota suora tila käyttöön.</span></a>"
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>HUOMAA:</b> virtuaalitodellisuuslasisi tukevat lisäpäivitystiheyttä, mutta SteamVR ei voi hallinnoida päivitystiheyttä, kun virtuaalitodellisuuslasit ovat jatketussa tilassa. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Ota suora tila käyttöön.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"Oculuksen yhteys näyttöön katkesi. Käynnistä uudelleen, kun olet tarkistanut VR-lasiesi kytkennät."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
@@ -2553,9 +2553,9 @@
 "[english]HeadsetView_HideButtonLabel"	"Hide VR View"
 "Settings_PerApplication_Reprojection_Header"	"Uudelleenprojisointi"
 "[english]Settings_PerApplication_Reprojection_Header"	"Reprojection"
-"Settings_PerApplication_Reprojection_Checkbox"	"Käytä alkuperäistä uudelleenprojisointi-tilaa"
+"Settings_PerApplication_Reprojection_Checkbox"	"Käytä alkuperäistä uudelleenprojektiotilaa"
 "[english]Settings_PerApplication_Reprojection_Checkbox"	"Use legacy reprojection mode"
-"Settings_PerApplication_Reprojection_Description"	"Tämän asetuksen valitseminen poistaa asynkronisen uudelleenprojisoinnin tältä peliltä."
+"Settings_PerApplication_Reprojection_Description"	"Tämän asetuksen valitseminen poistaa asynkronisen uudelleenprojektion tältä peliltä."
 "[english]Settings_PerApplication_Reprojection_Description"	"Checking this option will disable asynchronous reprojection for this title."
 "FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"Tunnistamaton USB-yhteys estää tukiaseman päivittämisen.<br><br><font color=#aaaa00>Irrota tukiasemaan liitetty USB-kaapeli.</font>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
@@ -2593,5 +2593,17 @@
 "[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 vaatii laitepäivityksen, jotta laitteen tunnistusta voidaan käyttää."
 "[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
+"MenuAction_BluetoothSettings"	"Bluetooth-asetukset"
+"[english]MenuAction_BluetoothSettings"	"Bluetooth Settings"
+"MenuAction_BaseStationSettings"	"Tukiaseman asetukset"
+"[english]MenuAction_BaseStationSettings"	"Base Station Settings"
+"Settings_Bluetooth_Title"	"Bluetooth-asetukset"
+"[english]Settings_Bluetooth_Title"	"Bluetooth Settings"
+"Settings_BaseStations_Title"	"Tukiaseman asetukset"
+"[english]Settings_BaseStations_Title"	"Base Station Settings"
+"Settings_Developer_Title"	"Kehittäjäasetukset"
+"[english]Settings_Developer_Title"	"Developer Settings"
+"MenuAction_PerformanceGraph"	"Näytä suorituskyvyn kaavio"
+"[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
 }
 }
