--- a/content/vrmonitor/translations/vrmonitor_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_italian.txt
@@ -2597,5 +2597,17 @@
 "[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 richiede un aggiornamento del dispositivo per poter essere identificato."
 "[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
+"MenuAction_BluetoothSettings"	"Impostazioni Bluetooth"
+"[english]MenuAction_BluetoothSettings"	"Bluetooth Settings"
+"MenuAction_BaseStationSettings"	"Impostazioni stazione di base"
+"[english]MenuAction_BaseStationSettings"	"Base Station Settings"
+"Settings_Bluetooth_Title"	"Impostazioni Bluetooth"
+"[english]Settings_Bluetooth_Title"	"Bluetooth Settings"
+"Settings_BaseStations_Title"	"Impostazioni stazione di base"
+"[english]Settings_BaseStations_Title"	"Base Station Settings"
+"Settings_Developer_Title"	"Impostazioni per sviluppatori"
+"[english]Settings_Developer_Title"	"Developer Settings"
+"MenuAction_PerformanceGraph"	"Mostra il grafico delle prestazioni"
+"[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
 }
 }
