--- a/content/vrmonitor/translations/vrmonitor_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_japanese.txt
@@ -2099,16 +2099,22 @@
 "[english]Advanced_ReprojectionOn"	"Reprojection On"
 "Advanced_ReprojectionOff"	"再投影 オフ"
 "[english]Advanced_ReprojectionOff"	"Reprojection Off"
+"Settings_StatusWindowHidePopups_Text"	"最小化時のSteam VR警告表示を抑制"
+"[english]Settings_StatusWindowHidePopups_Text"	"Suppress VR warnings and alerts when minimized"
 "MenuAction_ShowControllerBinding"	"コントローラ設定"
 "[english]MenuAction_ShowControllerBinding"	"Controller Settings"
 "MenuAction_ShowManageTrackers"	"Viveトラッカーを管理"
 "[english]MenuAction_ShowManageTrackers"	"Manage Vive Trackers"
 "Settings_BaseStation_BluetoothBusy"	"ブルートゥースを待機中…"
 "[english]Settings_BaseStation_BluetoothBusy"	"Waiting for Bluetooth..."
+"Settings_BaseStation_BluetoothRequired"	"ベースステーションの電源管理や更新などのワイヤレス機能にアクセスするにはブルートゥースを有効にしてください。"
+"[english]Settings_BaseStation_BluetoothRequired"	"Please enable Bluetooth to access wireless features such as base station power management and updates."
 "Settings_BaseStation_OpenSettingsBluetooth"	"ブルートゥース設定を表示"
 "[english]Settings_BaseStation_OpenSettingsBluetooth"	"View Bluetooth Settings"
 "Settings_BaseStation_PowerManagement"	"電源管理"
 "[english]Settings_BaseStation_PowerManagement"	"Power Management"
+"Settings_BaseStation_PowerManagement_Explanation"	"SteamVRの使用状態に応じて、ベースステーションのスタンバイモード／起動の切り替えを行います。"
+"[english]Settings_BaseStation_PowerManagement_Explanation"	"Wake up and set base stations into Standby mode based on your use of SteamVR."
 "Settings_BaseStation_ScanForBaseStations"	"ベースステーションの検出"
 "[english]Settings_BaseStation_ScanForBaseStations"	"Scan For Base Stations"
 "Settings_BaseStation_ScanForBaseStations_Explanation"	"ブルートゥース信号を送信している既知のベースステーションを検出します。"
@@ -2127,6 +2133,8 @@
 "[english]Settings_Advanced_MotionReprojection_Description"	"SteamVR synthesizes new frames to maintain a good experience when the running application cannot make framerate."
 "Settings_Advanced_MotionReprojection"	"モーション再投影を有効化"
 "[english]Settings_Advanced_MotionReprojection"	"Enable Motion Reprojection"
+"Settings_Advanced_MotionReprojection_Disabled"	"モーション再投影は利用できません。Windows 10とドライバ %2 以降の %1 GPUが必要です。"
+"[english]Settings_Advanced_MotionReprojection_Disabled"	"Motion Reprojection is unavailable. It requires Windows 10 and an %1 GPU with drivers %2 or newer."
 "Settings_Advanced_MotionReprojection_Disabled_AMD"	"現在、モーション再投影はAMDハードウェアでは利用不可です。"
 "[english]Settings_Advanced_MotionReprojection_Disabled_AMD"	"Motion Reprojection is currently unavailable on AMD hardware."
 "Settings_PerApplication_MotionReprojection_Header"	"モーション再投影"
@@ -2159,6 +2167,8 @@
 "[english]BS_PowerManagement_Title"	"Base Station Power Management"
 "BS_PowerManagement_Enable"	"電源管理を有効化*"
 "[english]BS_PowerManagement_Enable"	"Enable Power Management *"
+"BS_PowerManagement_Enable_Explanation"	"電源管理されたベースステーションでは、SteamVRを使用していない時はスタンバイモードになり、SteamVRの使用を開始するとスタンバイ状態から復帰します。\n"
+"[english]BS_PowerManagement_Enable_Explanation"	"Power managed Base Stations go into standby mode when SteamVR is not in use, and wake up again when SteamVR starts.\n"
 "BS_PowerManagement_RefreshLink"	"更新"
 "[english]BS_PowerManagement_RefreshLink"	"Refresh"
 "BS_PowerManagement_ForgetBase"	"このデバイスを無視"
@@ -2295,6 +2305,10 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 の接続に失敗しました。「更新」をクリックしてもう一度お試しください。"
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
+"Monitor_WakingBaseStations"	"ベースステーションを復帰中..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
+"Monitor_PuttingBaseStationsInStandby"	"ベースステーションをスタンバイ状態に移行中..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"未完了の更新から回復"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"正常にトラッキングを行うには、中断またはキャンセルされたベースステーションの更新を行ってください。"
@@ -2303,6 +2317,12 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"更新を続行するには、ベースステーションの電源を入れ直し、SteamVRを再起動して光学的に再検出する必要があります。ベースステーションの電源ケーブルのプラグを抜いてからもう一度差し込んでください。"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"このベースステーションは既に新しいバージョンに更新されているため、続行できません。ベースステーションの電源ケーブルのプラグを抜いてから、再度差し込んでください。"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"下の「再試行」をクリックして再度お試しください。"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"下の「キャンセル」をクリックしてSteamVRを再起動してください。"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
 "FirmwareWizard_ProgressPercentStarting"	"[ 開始中... ]"
 "[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
 "FirmwareWizard_ProgressPercentSearching"	"[ スキャン中... ]"
@@ -2313,6 +2333,8 @@
 "[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
 "BS20_UpdateRecovery_Incomplete"	"ベースステーションをスキャン中...\n\n未完了。"
 "[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
+"BS20_UpdateRecovery_FoundStation"	"スキャンが完了しました。<br><br><font color=#ffffff><b>更新が未完了のため正常に動作していないベースステーションが見つかりました。</b></font><br><br>下の「デバイスの更新」をクリックして更新を続行してください。"
+"[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
 "BS20_UpdateRecovery_NoStationsFound"	"スキャンが完了しました。\n\n近くに回復が必要な通信中のベースステーションはありません。"
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"再スキャン"
@@ -2441,6 +2463,8 @@
 "[english]BS20_ConfigureChannel_BluetoothRequired"	"Channel configuration requires Bluetooth communication to be enabled.\n\nPlease enable Bluetooth communication in Settings."
 "BS20_ConfigureChannel_BaseStationName"	"%1 をチャンネル %2 で設定中"
 "[english]BS20_ConfigureChannel_BaseStationName"	"Configuring %1 on Channel %2"
+"BS20_ConfigureChannel_Description"	"潜在的トラッキング競合を避けるために、使用されていないチャンネルをこのベースステーション用に選択してください。"
+"[english]BS20_ConfigureChannel_Description"	"Select an unused channel for this Base Station to avoid potential tracking conflicts."
 "BS20_ConfigureChannel_InUseByPrefix"	"現在使用中："
 "[english]BS20_ConfigureChannel_InUseByPrefix"	"Currently used by:"
 "BS20_ConfigureChannel_Legend"	"無線近接通信で他のベースステーションによって使用されているチャンネルを表示。"
@@ -2449,6 +2473,10 @@
 "[english]BS20_ConfigureChannel_AutomaticConfiguration"	"Automatic Configuration"
 "BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"チャンネル競合はありません。"
 "[english]BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"There are no channel conflicts."
+"BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"%1 個の潜在的チャンネル競合を解決するための空きチャンネルがありません。手動でのチャンネル設定が必要な可能性があります。"
+"[english]BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"There are no free channels to resolve %1 potential channel conflicts. You may need to manually configure channels."
+"BS20_ConfigureChannel_AutoConfig_NotEnoughFreeChannels"	"%2 個の潜在的チャンネル競合の解決に必要な空きチャンネルが%1 個しかありません。このまま競合を解決しますか？"
+"[english]BS20_ConfigureChannel_AutoConfig_NotEnoughFreeChannels"	"There are only enough free channels to resolve %1 out of %2 potential channel conflicts. Continue and resolve conflicts?"
 "BS20_ConfigureChannel_AutoConfigContinue"	"%1 個の潜在的チャンネル競合は、チャンネルを再度割り当てることで自動的に解決する可能性があります。このまま競合を解決しますか？"
 "[english]BS20_ConfigureChannel_AutoConfigContinue"	"There are %1 potential channel conflicts that can be automatically resolved by re-assigning their channels. Continue and resolve conflicts?"
 "BS20_ConfigureChannel_AutoConfig_SuccessfulCompletion"	"自動設定が完了しました。\n\nチャンネル競合はありません。"
@@ -2489,10 +2517,18 @@
 "[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "Key_Escape_Abbreviation"	"ESC"
 "[english]Key_Escape_Abbreviation"	"ESC"
+"HeadsetView_Title"	"VRビュー"
+"[english]HeadsetView_Title"	"VR View"
 "HeadsetView_MenuLabel"	"メニュー"
 "[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"%1 を押すとフルスクリーン表示を終了"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
 "HeadsetView_FullscreenButtonLabel"	"フルスクリーン"
 "[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_DockButtonLabel"	"VRビューをドッキング"
+"[english]HeadsetView_DockButtonLabel"	"Dock VR View"
+"HeadsetView_UndockButtonLabel"	"VRビューのドッキング解除"
+"[english]HeadsetView_UndockButtonLabel"	"Undock VR View"
 "HeadsetView_CloseButtonLabel"	"閉じる"
 "[english]HeadsetView_CloseButtonLabel"	"Close"
 "HeadsetView_EyeMode_Both"	"両目"
@@ -2505,11 +2541,63 @@
 "[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
 "HeadsetView_EyeMode_BothRightDominant"	"両目 - 右優位"
 "[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"中央表示"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
+"HeadsetView_DebugCommands"	"デバッグコマンドを開く"
+"[english]HeadsetView_DebugCommands"	"Open Debug Commands"
+"HeadsetView_HideButtonLabel"	"VRビューを非表示"
+"[english]HeadsetView_HideButtonLabel"	"Hide VR View"
+"Settings_PerApplication_Reprojection_Header"	"再投影"
+"[english]Settings_PerApplication_Reprojection_Header"	"Reprojection"
+"Settings_PerApplication_Reprojection_Checkbox"	"レガシー再投影モードを使用"
+"[english]Settings_PerApplication_Reprojection_Checkbox"	"Use legacy reprojection mode"
+"Settings_PerApplication_Reprojection_Description"	"このオプションを選択すると、このタイトルでの非同期再投影を無効化します。"
+"[english]Settings_PerApplication_Reprojection_Description"	"Checking this option will disable asynchronous reprojection for this title."
+"FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"ベースステーションへの予期しないUSB接続により、ワイヤレスアップデートができません。<br><br><font color=#aaaa00>ベースステーションに接続しているUSBケーブルを抜いてください。</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
+"FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"ベースステーションへの予期しないUSB接続により、ワイヤレスアップデートを完了できません。<ul><li><font color=#aaaa00>ベースステーションの電源ケーブルを抜きます。<li>ベースステーションに接続しているUSBケーブルを抜きます。<li>ベースステーションの電源ケーブルのみ差し込みます。<li>ベースステーションが内部更新処理を終了するまで30秒ほどお待ちください。</font></ul><br>内部更新中はベースステーションのLEDが点灯しない可能性があります。<br>更新中はケーブルを抜いたり、ベースステーションへ接続したりしないようにしてください。"
+"[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
 "Settings_Audio_Device_HMD"	"VRヘッドセット"
 "[english]Settings_Audio_Device_HMD"	"VR Headset"
 "Settings_Audio_Device_Other"	"その他"
 "[english]Settings_Audio_Device_Other"	"Other"
 "Settings_Audio_Default"	"デフォルト"
 "[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"オーディオミラーを有効化"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"ベースステーションへの予期しないUSB接続により、ワイヤレスアップデートを完了できません。<ul><li><font color=#aaaa00>ベースステーションの電源ケーブルを抜きます。<li>ベースステーションに接続されているUSBケーブルを抜きます。<li>ベースステーションの電源ケーブルのみ差し込みます。<li>ベースステーションの内部更新処理が終了するまで30秒待ちます。</font></ul><br>内部更新中はベースステーションのLEDが点灯しない場合があります。<br>更新中はケーブルを抜いたり、ベースステーションに接続したりしないようにしてください。"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"このベースステーションの更新を続行するには電源の入れ直しが必要です。<br><br><font color=#aaaa00>続行する前に、ベースステーションの電源ケーブルのプラグを抜いてから、再度差し込んでください。</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"このデバイスの更新が失敗し先に進めない場合には... <ul><li>SteamVRを終了する。<li>ベースステーションに接続されているUSBケーブルを全て抜く。<li>ベースステーションにUSBを接続しない。<li>リンクボックスの電源ケーブルを抜き差しする。<li>ベースステーションの電源ケーブルを抜き差しする。<li>SteamVRを起動して再試行する。</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"このデバイスの更新が失敗し先に進めない場合には... <ul><li>SteamVRを終了する。<li>ベースステーションに接続されているUSBケーブルを全て抜く。<li>ベースステーションにUSBを接続しない。<li>ベースステーションの電源ケーブルを抜き差しする。<li>SteamVRを起動して再試行する。</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVRはベースステーションの電源管理ができます。<br><br>電源管理されたベースステーションは、SteamVRが使用されていない時にはスタンバイモードになり、SteamVRの起動時に再び起動します。<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"ベースステーションの電源管理を有効化 *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* 複数のSteamVRユーザーがトラッキングスペースを共有している場合はお勧めしません。</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"今すぐ終了（%1）"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
+"FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"周辺機器の更新"
+"[english]FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Peripheral Device Update"
+"BS_PowerManagement_Identify"	"クリックするとベースステーションを識別します。"
+"[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
+"BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"デバイスを識別するには %1 はデバイスの更新が必要です。"
+"[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
+"MenuAction_BluetoothSettings"	"ブルートゥース設定"
+"[english]MenuAction_BluetoothSettings"	"Bluetooth Settings"
+"MenuAction_BaseStationSettings"	"ベースステーション設定"
+"[english]MenuAction_BaseStationSettings"	"Base Station Settings"
+"Settings_Bluetooth_Title"	"ブルートゥース設定"
+"[english]Settings_Bluetooth_Title"	"Bluetooth Settings"
+"Settings_BaseStations_Title"	"ベースステーション設定"
+"[english]Settings_BaseStations_Title"	"Base Station Settings"
+"Settings_Developer_Title"	"開発者設定"
+"[english]Settings_Developer_Title"	"Developer Settings"
 }
 }
