--- a/content/vrmonitor/translations/vrmonitor_norwegian.txt
+++ b/content/vrmonitor/translations/vrmonitor_norwegian.txt
@@ -2302,7 +2302,7 @@
 "[english]BS20_ConfigureChannel_FirmwareUpdateRequired"	"%1 requires a device update to enable channel configuration."
 "BS20_ConfigureChannel_ProgressConnecting"	"\nKobler til basestasjoner...\n"
 "[english]BS20_ConfigureChannel_ProgressConnecting"	"\nConnecting To Base Stations...\n"
-"Settings_DoNotFadeToGrid"	"Ikke skift til rutenett, når programmet ikke svarer"
+"Settings_DoNotFadeToGrid"	"Ikke skift til rutenett når programmet ikke svarer"
 "[english]Settings_DoNotFadeToGrid"	"Do not fade to grid when app hangs"
 "Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Bevegelsesutjevning støttes ikke på eldre versjoner av Windows."
 "[english]Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Motion Smoothing is not supported on older versions of Windows."
@@ -2604,5 +2604,17 @@
 "[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 krever en enhetsoppdatering for å slå på enhetsidentifikasjon."
 "[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
+"MenuAction_BluetoothSettings"	"Bluetooth-innstillinger"
+"[english]MenuAction_BluetoothSettings"	"Bluetooth Settings"
+"MenuAction_BaseStationSettings"	"Basestasjonsinnstillinger"
+"[english]MenuAction_BaseStationSettings"	"Base Station Settings"
+"Settings_Bluetooth_Title"	"Bluetooth-innstillinger"
+"[english]Settings_Bluetooth_Title"	"Bluetooth Settings"
+"Settings_BaseStations_Title"	"Basestasjonsinnstillinger"
+"[english]Settings_BaseStations_Title"	"Base Station Settings"
+"Settings_Developer_Title"	"Utviklerinnstillinger"
+"[english]Settings_Developer_Title"	"Developer Settings"
+"MenuAction_PerformanceGraph"	"Vis ytelsesgraf"
+"[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
 }
 }
