--- a/content/vrmonitor/translations/vrmonitor_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_spanish.txt
@@ -2592,5 +2592,17 @@
 "[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requiere una actualización del dispositivo para activar la identificación."
 "[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
+"MenuAction_BluetoothSettings"	"Ajustes de Bluetooth"
+"[english]MenuAction_BluetoothSettings"	"Bluetooth Settings"
+"MenuAction_BaseStationSettings"	"Ajustes de la estación base"
+"[english]MenuAction_BaseStationSettings"	"Base Station Settings"
+"Settings_Bluetooth_Title"	"Ajustes de Bluetooth"
+"[english]Settings_Bluetooth_Title"	"Bluetooth Settings"
+"Settings_BaseStations_Title"	"Ajustes de la estación base"
+"[english]Settings_BaseStations_Title"	"Base Station Settings"
+"Settings_Developer_Title"	"Ajustes de desarrollador"
+"[english]Settings_Developer_Title"	"Developer Settings"
+"MenuAction_PerformanceGraph"	"Mostrar gráfico de rendimiento"
+"[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
 }
 }
