--- a/content/vrmonitor/translations/vrmonitor_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_turkish.txt
@@ -2170,7 +2170,7 @@
 "[english]Advanced_MotionReprojection_NotActive"	"Motion Reprojection Off"
 "Advanced_MotionReprojection_Disabled"	"Hareket Yeniden Yansıtması Mevcut Değil"
 "[english]Advanced_MotionReprojection_Disabled"	"Motion Reprojection Unavailable"
-"Advanced_BaseStation"	"Ana İstasyon"
+"Advanced_BaseStation"	"Takip İstasyonu"
 "[english]Advanced_BaseStation"	"Base Station"
 "MessageBox_Forget"	"Unut"
 "[english]MessageBox_Forget"	"Forget"
@@ -2616,5 +2616,17 @@ Güncelleme esnasında ana istasyondan herhangi bir şeyi çıkarmayın ya da an
 "[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"Aygıt tanımlamasının etkinleştirilebilmesi için %1, aygıt güncellemesine gereksinim duyuyor."
 "[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
+"MenuAction_BluetoothSettings"	"Bluetooth Ayarları"
+"[english]MenuAction_BluetoothSettings"	"Bluetooth Settings"
+"MenuAction_BaseStationSettings"	"Takip İstasyonu Ayarları"
+"[english]MenuAction_BaseStationSettings"	"Base Station Settings"
+"Settings_Bluetooth_Title"	"Bluetooth Ayarları"
+"[english]Settings_Bluetooth_Title"	"Bluetooth Settings"
+"Settings_BaseStations_Title"	"Takip İstasyonu Ayarları"
+"[english]Settings_BaseStations_Title"	"Base Station Settings"
+"Settings_Developer_Title"	"Geliştirici Ayarları"
+"[english]Settings_Developer_Title"	"Developer Settings"
+"MenuAction_PerformanceGraph"	"Performans Grafiğini Görüntüle"
+"[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
 }
 }
