--- a/content/vrmonitor/translations/vrmonitor_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_ukrainian.txt
@@ -683,7 +683,7 @@
 "[english]FirmwareWizard_Shutdown_TextContent"	"To update your device, SteamVR will need to quit any currently running VR applications.\n\nWould you like to continue?"
 "FirmwareWizard_DeviceOverview_Title"	"Оновлення пристрою"
 "[english]FirmwareWizard_DeviceOverview_Title"	"Update Device"
-"FirmwareWizard_DeviceOverview_TextContent"	"Котрий з пристроїв ви бажаєте оновити?"
+"FirmwareWizard_DeviceOverview_TextContent"	"Котрий із пристроїв ви бажаєте оновити?"
 "[english]FirmwareWizard_DeviceOverview_TextContent"	"Which device would you like to update?"
 "FirmwareWizard_DeviceOverview_UpdateAvailable"	"Оновлення доступне"
 "[english]FirmwareWizard_DeviceOverview_UpdateAvailable"	"Update available"
@@ -2604,5 +2604,17 @@
 "[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 вимагає оновлення пристрою, щоби ввімкнути виявлення пристрою."
 "[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
+"MenuAction_BluetoothSettings"	"Налаштування Bluetooth"
+"[english]MenuAction_BluetoothSettings"	"Bluetooth Settings"
+"MenuAction_BaseStationSettings"	"Налаштування базових станцій"
+"[english]MenuAction_BaseStationSettings"	"Base Station Settings"
+"Settings_Bluetooth_Title"	"Налаштування Bluetooth"
+"[english]Settings_Bluetooth_Title"	"Bluetooth Settings"
+"Settings_BaseStations_Title"	"Налаштування базових станцій"
+"[english]Settings_BaseStations_Title"	"Base Station Settings"
+"Settings_Developer_Title"	"Налаштування розробника"
+"[english]Settings_Developer_Title"	"Developer Settings"
+"MenuAction_PerformanceGraph"	"Показати графік швидкодії"
+"[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
 }
 }
