--- a/content/panorama/localization/tenfoot_dutch.txt
+++ b/content/panorama/localization/tenfoot_dutch.txt
@@ -354,7 +354,7 @@
 "[english]Menu_HTCPhone"	"Phone"
 "Menu_Steam"	"Steam"
 "[english]Menu_Steam"	"Steam"
-"Menu_Browser"	"web, internet"
+"Menu_Browser"	"Web"
 "[english]Menu_Browser"	"Web"
 "Menu_Friends"	"Vrienden"
 "[english]Menu_Friends"	"Friends"
@@ -634,12 +634,16 @@
 "[english]Customization_Disclaimer"	"If Enhanced SteamVR Environments is enabled, use the in-app menu to customize your home space."
 "VRSettingsKnucklesTitle"	"Knuckles"
 "[english]VRSettingsKnucklesTitle"	"Knuckles"
-"VRSettingsKnuckles_CapsenseMode"	"Capacitieve sensormodus"
+"VRSettingsKnuckles_CapsenseMode"	"Capacitieve-sensormodus"
 "[english]VRSettingsKnuckles_CapsenseMode"	"Cap Sense Mode"
 "KnucklesCapsenseMode_0"	"Vingervolging (standaard)"
 "[english]KnucklesCapsenseMode_0"	"Finger Tracking (Default)"
 "KnucklesCapsenseMode_1"	"Vingervolging uitgeschakeld"
 "[english]KnucklesCapsenseMode_1"	"Finger Tracking Disabled"
+"KnucklesCapsenseMode_2"	"Capacitieve sensoren als trekker"
+"[english]KnucklesCapsenseMode_2"	"Cap Sense controls Trigger"
+"KnucklesCapsenseMode_3"	"Capacitieve sensoren als greep"
+"[english]KnucklesCapsenseMode_3"	"Cap Sense controls Grip"
 "VRSettingsCamera_RoomViewMode_Label"	"Cameramodus voor kamerweergave"
 "[english]VRSettingsCamera_RoomViewMode_Label"	"Room View Camera Mode"
 "VRSettingsCamera_RoomViewMode_EdgeA"	"Gekleurde randen"
@@ -666,4 +670,6 @@
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
 "App_Not_Responding"	"Wachten tot applicatie weer reageert"
 "[english]App_Not_Responding"	"Waiting for application to respond"
+"VRSettingsDisplaySettingsTitle"	"Weergave-instellingen"
+"[english]VRSettingsDisplaySettingsTitle"	"Display Settings"
 }
