--- a/content/panorama/localization/tenfoot_french.txt
+++ b/content/panorama/localization/tenfoot_french.txt
@@ -410,7 +410,7 @@
 "[english]OverlaysDesc"	"Select Overlays to remain active in the Dashboard."
 "OverlaysBrowse"	"Parcourez les Overlays proposés dans le Magasin Steam"
 "[english]OverlaysBrowse"	"Browse available Overlays in the Steam Store"
-"Now_Starting"	"LANCEMENT DE"
+"Now_Starting"	"LANCEMENT EN COURS"
 "[english]Now_Starting"	"NEXT UP"
 "Next_App_Name"	"{s:starting_app_name}"
 "[english]Next_App_Name"	"{s:starting_app_name}"
