--- a/content/vrmonitor/translations/vrmonitor_czech.txt
+++ b/content/vrmonitor/translations/vrmonitor_czech.txt
@@ -2612,5 +2612,17 @@
 "[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 vyžaduje pro rozpoznání aktualizaci."
 "[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
+"MenuAction_BluetoothSettings"	"Nastavení Bluetooth"
+"[english]MenuAction_BluetoothSettings"	"Bluetooth Settings"
+"MenuAction_BaseStationSettings"	"Nastavení základních stanic"
+"[english]MenuAction_BaseStationSettings"	"Base Station Settings"
+"Settings_Bluetooth_Title"	"Nastavení Bluetooth"
+"[english]Settings_Bluetooth_Title"	"Bluetooth Settings"
+"Settings_BaseStations_Title"	"Nastavení základních stanic"
+"[english]Settings_BaseStations_Title"	"Base Station Settings"
+"Settings_Developer_Title"	"Nastavení pro vývojáře"
+"[english]Settings_Developer_Title"	"Developer Settings"
+"MenuAction_PerformanceGraph"	"Zobrazit graf výkonu"
+"[english]MenuAction_PerformanceGraph"	"Display Performance Graph"
 }
 }
